# Real-Time-Object-Counter-in-C-

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/input/: put-your-video-here.txt
assets/output/: output-files-will-be-created-here.txt
docs/: quick-start.txt
include/: config.hpp  counter.hpp  csv_logger.hpp  tracker.hpp  utils.hpp
screenshots/: add-your-demo-images-here.txt
src/: counter.cpp  csv_logger.cpp  main.cpp  tracker.cpp  utils.cpp
